fix: Update layout for data visualization cards to use full-width columns

--- a/templates/index.html
+++ b/templates/index.html
@@ -1589,7 +1589,7 @@
                         <div class="tab-pane fade show active" id="data-viz" role="tabpanel">
                             <div class="row g-4">
                                 <!-- Histogram -->
-                                <div class="col-lg-6">
+                                <div class="col-12">
                                     <div class="card glass-card">
                                         <div class="card-header">
                                             <i class="fas fa-chart-bar me-2"></i>Histogram
@@ -1613,7 +1613,7 @@
                                 </div>
 
                                 <!-- Box Plot -->
-                                <div class="col-lg-6">
+                                <div class="col-12">
                                     <div class="card glass-card">
                                         <div class="card-header">
                                             <i class="fas fa-box me-2"></i>Box Plot
@@ -1633,7 +1633,7 @@
                                 </div>
 
                                 <!-- Scatter Plot -->
-                                <div class="col-lg-6">
+                                <div class="col-12">
                                     <div class="card glass-card">
                                         <div class="card-header">
                                             <i class="fas fa-braille me-2"></i>Scatter Plot
@@ -1664,7 +1664,7 @@
                                 </div>
 
                                 <!-- Correlation Heatmap -->
-                                <div class="col-lg-6">
+                                <div class="col-12">
                                     <div class="card glass-card">
                                         <div class="card-header">
                                             <i class="fas fa-th me-2"></i>Correlation Heatmap
@@ -1689,7 +1689,7 @@
                         <div class="tab-pane fade" id="model-viz" role="tabpanel">
                             <div class="row g-4">
                                 <!-- Confusion Matrix -->
-                                <div class="col-lg-6">
+                                <div class="col-12">
                                     <div class="card glass-card">
                                         <div class="card-header">
                                             <i class="fas fa-table me-2"></i>Confusion Matrix
@@ -1709,7 +1709,7 @@
                                 </div>
 
                                 <!-- ROC Curve -->
-                                <div class="col-lg-6">
+                                <div class="col-12">
                                     <div class="card glass-card">
                                         <div class="card-header">
                                             <i class="fas fa-chart-area me-2"></i>ROC Curve
@@ -1729,7 +1729,7 @@
                                 </div>
 
                                 <!-- Feature Importance -->
-                                <div class="col-lg-6">
+                                <div class="col-12">
                                     <div class="card glass-card">
                                         <div class="card-header">
                                             <i class="fas fa-sort-amount-down me-2"></i>Feature Importance
@@ -1754,7 +1754,7 @@
                                 </div>
 
                                 <!-- Residual Plot -->
-                                <div class="col-lg-6">
+                                <div class="col-12">
                                     <div class="card glass-card">
                                         <div class="card-header">
                                             <i class="fas fa-project-diagram me-2"></i>Residual Plot
